substrate/frame/support/test/tests/split_ui/import_without_pallet.stderr
error: `#[import_section]` can only be applied to a valid pallet module
  --> tests/split_ui/import_without_pallet.rs:29:9
   |
29 | pub mod pallet {
   |         ^^^^^^
